#97 Update samples with new version of JavaFX Maven plugin